# nlvm

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  IMPLEMENTATION_STATUS.md  LICENSE  Next.md  PLAN.md  README.md  TODO_stack_trace.md  install.sh  todo.md
crates/nl-test-runner/: Cargo.toml
crates/nl-test-runner/src/: header.rs  main.rs  runner.rs  testfile.rs
docs/: CNAME  getting-started.html  index.html  initial_build.md
journal/: journal_03_phase9_language_features.md  journal_04_self_in_interfaces_cloneable_valueequatable.md
tests/: phase10_0010_self_in_user_interface.yaml  phase10_0020_cloneable_interface.yaml  phase10_0030_value_equatable_interface.yaml  phase11_0010_switch_fallthrough_and_break.yaml  phase11_0020_switch_break_vs_continue_in_loop.yaml  phase11_0030_interface_extends_transitive.yaml  phase11_0040_interface_extends_e044_transitive.yaml  phase11_0050_foreach_explicit_const_e039.yaml  phase11_0060_typedef_basic_and_array_alias.yaml  phase11_0070_typedef_template_alias.yaml  phase11_0080_typedef_function_type_alias.yaml  phase11_0090_reserved_keyword_as_identifier.yaml  phase14_0010_prefix_postfix_incr_decr_int_value.yaml  phase14_0020_prefix_incr_ref_param_and_closure_capture.yaml  phase14_0030_prefix_postfix_incr_operator_overload_same_value.yaml  phase14_0040_prefix_incr_non_identifier_target_parse_error.yaml  phase14_0050_method_overload_resolution_by_argument_type.yaml  phase14_0060_constructor_overload_resolution_by_argument_type.yaml  phase16_0010_static_overload_implicit_same_class_call.yaml  phase19_0010_system_in_readline.yaml  (+83 more)
(+66 files in other folders)
